# aws-iot-device-defender-agent-c

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  NOTICE  README.md  THIRD-PARTY-LICENSES.txt
doc/: proc_formats.org  sample_job.json
external_libs/: SDK_CMakeLists.txt
include/: aws_iot_config.h
scripts/: bootstrap.sh
src/: agent.c  agent.h  agent_config.h  collector.c  collector.h  jobsHandler.c  jobsHandler.h  metrics.c  metrics.h
test/: test_collector.c  test_main.c  test_metrics.c
test/data/: proc_dev  proc_snmp  proc_tcp  proc_tcp6  proc_udp  proc_udp6
